Finsihed drum machine with updated background graphic

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(TR-09_top.jpg) bottom center;
+  background: url(DrumMachineSkin.jpg) bottom center;
   background-size: cover;
 }
 
